--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@vercel/node": "^3.0.7",
     "typescript": "^4.1.5"
   }
 }
