--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
