--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^2.2.1",
     "next": "^14.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
